@@ -61,7 +61,6 @@ export(setEBV)
 export(setPheno)
 export(setPhenoGCA)
 export(smithHazel)
-export(trackHaploPop)
 export(usefulness)
 export(varA)
 export(varD)
