@@ -81,68 +81,6 @@ newMapPop = function(genMap,haplotypes,inbred=FALSE,
   return(output)
 }
 
-#' @title Haplotype tracking population
-#' 
-#' @description
-#' Creates a population contain haplotypes numbered for 
-#' identity be descent tracking.
-#'
-#' @param genMap a list of genetic maps
-#' @param nInd number of individuals
-#' @param inbred should individuals be fully inbred
-#' @param ploidy ploidy level of organism
-#' 
-#' @details
-#' Each item of genMap must be a vector of ordered genetic lengths in 
-#' Morgans. The first value must be zero. The length of the vector 
-#' determines the number of segregating sites on the chromosome.
-#' 
-#' If inbred=FALSE, the value of nInd must be less than or equal to 
-#' 128. Otherwise, it must be less than or equal to 256.
-#' 
-#' @examples
-#' # Create genetic map for a single chromosome with 1 Morgan
-#' # Chromosome contains 11 equally spaced segregating sites
-#' genMap = list(seq(0,1,length.out=11))
-#' founderPop = trackHaploPop(genMap=genMap,nInd=10)
-#' 
-#' @export
-trackHaploPop = function(genMap,nInd,inbred=FALSE,
-                         ploidy=2L){
-  stopifnot(is.list(genMap))
-  ploidy = as.integer(ploidy)
-  if(inbred){
-    stopifnot(nInd<=256)
-  }else{
-    stopifnot(nInd<=(256/ploidy))
-  }
-  nInd = as.integer(nInd)
-  nChr = length(genMap)
-  nLoci = unlist(lapply(genMap,length))
-  geno = vector("list",nChr)
-  for(i in 1:nChr){
-    tmpGeno = array(raw(),dim=c(nLoci[i],ploidy,nInd))
-    tmp=-1
-    for(j in 1:nInd){
-      if(inbred){
-        tmp=tmp+1
-        tmpGeno[,1:2,j] = as.raw(tmp)
-      }else{
-        for(k in 1:ploidy){
-          tmp=tmp+1
-          tmpGeno[,k,j] = as.raw(tmp)
-        } 
-      }
-    }
-    geno[[i]] = tmpGeno
-  }
-  output = new("MapPop",nInd=nInd,nChr=nChr,ploidy=ploidy,
-               nLoci=nLoci,geno=as.matrix(geno),
-               genMap=as.matrix(genMap),
-               centromere=sapply(genMap,max)/2)
-  return(output)
-}
-
 #' @title Create founder haplotypes using MaCS
 #'
 #' @description Uses the MaCS software to produce founder haplotypes.
