@@ -31,7 +31,7 @@ new individuals is [mother_id]_[father_id]
 }
 \examples{
 #Create founder haplotypes
-founderPop = quickHaplo(nInd=10, nChr=1, segSites=10, inbred=TRUE)
+founderPop = quickHaplo(nInd=2, nChr=1, segSites=10)
 
 #Set simulation parameters
 SP = SimParam$new(founderPop)
