@@ -1,8 +1,9 @@
 context("editGenome")
 
 test_that("editGenome",{
-  genMap = list(c(0))
-  founderPop = trackHaploPop(genMap=genMap,nInd=2,inbred=TRUE)
+  founderPop = newMapPop(list(c(0)),
+                         list(matrix(c(0,0,1,1),
+                                     nrow=4,ncol=1)))
   SP = SimParam$new(founderPop=founderPop)
   SP$addTraitA(nQtlPerChr=1,mean=0,var=1)
   pop = newPop(founderPop,simParam=SP)
